--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </li>
 
           <li class="fb">
-            <a href="https://www.facebook.com/viktorbelarus123" target="_blank">facebook.com/viktorbelarus123</a>
+            <a href="https://www.facebook.com/ViktarProdzevus" target="_blank">facebook.com/ViktarProdzevus</a>
           </li>
 
           <li class="telegram">
