--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </li>
 
             <li class="fb">
-              <a href="https://www.facebook.com/ViktorProdeus" target="_blank">facebook.com/ViktorProdeus</a>
+              <a href="https://www.facebook.com/ViktarProdzevus/" target="_blank">facebook.com/ViktorProdeus</a>
             </li>
 
             <li class="telegram">
